@@ -20,6 +20,57 @@ global $config;
 
 check_login ();
 
+$sortField = get_parameter('sort_field');
+$sort = get_parameter('sort', 'none');
+
+$selected = 'border: 1px solid black;';
+$selectUserIDUp = '';
+$selectUserIDDown = '';
+$selectFullnameUp = '';
+$selectFullnameDown = '';
+$selectLastConnectUp = '';
+$selectLastConnectDown = '';
+$order = null;
+
+switch ($sortField) {
+	case 'id_user':
+		switch ($sort) {
+			case 'up':
+				$selectUserIDUp = $selected;
+				$order = array('field' => 'id_user', 'order' => 'ASC');
+				break;
+			case 'down':
+				$selectUserIDDown = $selected;
+				$order = array('field' => 'id_user', 'order' => 'DESC');
+				break;
+		}
+		break;
+	case 'fullname':
+		switch ($sort) {
+			case 'up':
+				$selectFullnameUp = $selected;
+				$order = array('field' => 'fullname', 'order' => 'ASC');
+				break;
+			case 'down':
+				$selectFullnameDown = $selected;
+				$order = array('field' => 'fullname', 'order' => 'DESC');
+				break;
+		}
+		break;
+	case 'last_connect':
+		switch ($sort) {
+			case 'up':
+				$selectLastConnectUp = $selected;
+				$order = array('field' => 'fullname', 'order' => 'ASC');
+				break;
+			case 'down':
+				$selectLastConnectDown = $selected;
+				$order = array('field' => 'fullname', 'order' => 'DESC');
+				break;
+		}
+		break;
+}
+
 // Header
 print_page_header (__('Pandora users'), "images/group.png", false, "", false, "");
 
@@ -31,9 +82,15 @@ $table->head = array ();
 $table->data = array ();
 $table->align = array ();
 
-$table->head[0] = __('User ID');
-$table->head[1] = __('Name');
-$table->head[2] = __('Last contact');
+$table->head[0] = __('User ID') . ' ' . 
+	'<a href="?sec=usuarios&sec2=operation/users/user&sort_field=id_user&sort=up"><img src="images/sort_up.png" style="' . $selectUserIDUp . '" /></a>' .
+	'<a href="?sec=usuarios&sec2=operation/users/user&sort_field=id_user&sort=down"><img src="images/sort_down.png" style="' . $selectUserIDDown . '" /></a>';
+$table->head[1] = __('Name') . ' ' .
+	'<a href="?sec=usuarios&sec2=operation/users/user&sort_field=fullname&sort=up"><img src="images/sort_up.png" style="' . $selectFullnameUp . '" /></a>' .
+	'<a href="?sec=usuarios&sec2=operation/users/user&sort_field=fullname&sort=down"><img src="images/sort_down.png" style="' . $selectFullnameDown . '" /></a>';
+$table->head[2] = __('Last contact') . ' ' . 
+	'<a href="?sec=usuarios&sec2=operation/users/user&sort_field=last_connect&sort=up"><img src="images/sort_up.png" style="' . $selectLastConnectUp . '" /></a>' .
+	'<a href="?sec=usuarios&sec2=operation/users/user&sort_field=last_connect&sort=down"><img src="images/sort_down.png" style="' . $selectLastConnectDown . '" /></a>';
 $table->head[3] = __('Profile');
 $table->head[4] = __('Description');
 
@@ -42,8 +99,8 @@ $table->align[3] = "center";
 
 
 $info = array ();
-// Get users ordered by id_user
-$info = get_users ("id_user",array ('offset' => (int) get_parameter ('offset'),
+
+$info = get_users ($order,array ('offset' => (int) get_parameter ('offset'),
 			'limit' => (int) $config['block_size']));
 
 //Only the users from the user groups are visible
